syntax = "proto3";

package home;
option go_package = "../../pkg/pb";

message CreateHouseRequest {
    string address = 1;
    int32 year = 2;
    string developer = 3;
}

message CreateHouseResponse {
    int32 id = 1;
    string address = 2;
    int32 year = 3;
    string developer = 4;
    string created_at = 5;
    string updated_at = 6;
}

